Chapter 6: Error handling and Directory convert.

--- a/dist-newstyle/packagedb/ghc-9.0.2/hs-blog-0.1.0.0-inplace.conf
+++ b/dist-newstyle/packagedb/ghc-9.0.2/hs-blog-0.1.0.0-inplace.conf
@@ -15,8 +15,8 @@ category:             Hackage categories, separated by commas
 abi:                  inplace
 exposed:              True
 exposed-modules:
-    HsBlog HsBlog.Convert HsBlog.Html HsBlog.Html.Internal
-    HsBlog.Markup
+    HsBlog HsBlog.Convert HsBlog.Directory HsBlog.Html
+    HsBlog.Html.Internal HsBlog.Markup
 
 import-dirs:
     /home/oskar/workspace/haskell-blog/dist-newstyle/build/x86_64-linux/ghc-9.0.2/hs-blog-0.1.0.0/build
@@ -29,7 +29,7 @@ dynamic-library-dirs:
 
 data-dir:             /home/oskar/workspace/haskell-blog/.
 hs-libraries:         HShs-blog-0.1.0.0-inplace
-depends:              base-4.15.1.0 directory-1.3.6.2
+depends:              base-4.15.1.0 directory-1.3.6.2 filepath-1.4.2.1
 haddock-interfaces:
     /home/oskar/workspace/haskell-blog/dist-newstyle/build/x86_64-linux/ghc-9.0.2/hs-blog-0.1.0.0/doc/html/hs-blog/hs-blog.haddock
 
