Chapter 7: Environment var handling.

--- a/hs-blog.cabal
+++ b/hs-blog.cabal
@@ -26,10 +26,12 @@ library
       base
     , directory
     , filepath
+    , mtl
   exposed-modules:
     HsBlog
       HsBlog.Convert
       HsBlog.Directory
+      HsBlog.Env
       HsBlog.Html
         HsBlog.Html.Internal
       HsBlog.Markup
@@ -39,6 +41,8 @@ executable hs-blog-gen
   import: common-settings
   hs-source-dirs: app
   main-is: Main.hs
+  other-modules:
+    OptParse
   build-depends:
       base
     , directory
